# ETS

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Initialize-ETS-Structure.ps1  Install-ETS-FastAPI.ps1  LICENSE  NOTICE  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: apalache.yml  benchmarks.yml  ci.yml  lean-proofs.yml  tla.yml
.repo-control/: repo-profile.yml
apps/observatory/: README.md
artifacts/proofs/: README.md
docs/: lantern-adapter.md  lantern-recommendations.md  project.json
docs/api/: README.md  local-requests.http  openapi.generated.json
docs/architecture/: DATA_FLOW.md  DEPLOYMENT_MODEL.md  INTERCONNECTED_SYSTEMS_GUIDE.md  LANTERN_TRUST_ANCHOR.md  LANTERN_TRUST_FEDERATION.md  README.md  STORAGE_MODEL.md  SYSTEM_ARCHITECTURE.md
docs/book/: ETS_Manuscript.md
docs/commercial/: HOSTED_PLATFORM_REQUIREMENTS.md  PRICING_METERING_MODEL.md  TENANT_MODEL.md
docs/decisions/: ADR-0001-ets-public-name.md  README.md
docs/demo/: election-rc-walkthrough.md  explorer-rc-walkthrough.md  lantern-tamper-walkthrough.md
docs/dissertation/: ABSTRACT.md  BYZANTINE_TEMPORAL_THEOREMS.md  CONTRIBUTIONS.md  DEFENSE_PREP.md  DEFENSE_SLIDES.md  DISSERTATION_STRUCTURE.md  EVALUATION_AND_BENCHMARKS.md  EVIDENCE_THEORY.md  FORMAL_ARCHITECTURE.md  FORMAL_FOUNDATIONS.md  FORMAL_PROOF_INDEX.md  GLOSSARY.md  IMPLEMENTATION_TRACEABILITY.md  LITERATURE_REVIEW.md  PROSPECTUS.md  (+11 more)
ets/: __init__.py  lantern.py
ets_core.egg-info/: PKG-INFO  SOURCES.txt
scripts/: Invoke-LanternProtocolCodexQueue.ps1  export_openapi.py  run-election-rc-demo.ps1  run_anchor_demo.py  run_evidence_demo.py  run_hash_chain_demo.py  run_lantern_tamper_demo.py  run_merkle_demo.py  run_phase2_demo.py  run_phase3_demo.py  run_signatures_demo.py  validate-docker-federation.ps1
tests/: test_ets_core.py  test_lantern_recommendations.py  test_lantern_support_adapter.py  test_lantern_trust.py  test_lantern_verifier.py  test_trust_federation.py
(+256 files in other folders)
